framec_tests/language_specific/python/v3_mir/positive/inside_comment_transition_ignored.frm
@target python

system S {
    machine:
        $A {
            e() {
                # comment with -> $B() and => $^
                native()
            }
        }
}

