framec_tests/language_specific/python/v3_mir/negative/native_after_terminal.frm
@target python

system S {
    machine:
        $A {
            e() {
                -> $B()
                x = 1  # native after terminal
            }
        }
}

